--- a/WpfApp/WpfApp/App.config
+++ b/WpfApp/WpfApp/App.config
@@ -14,5 +14,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="HospitalManagementDBEntities" connectionString="metadata=res://*/HospitalManagmentSystemModels.csdl|res://*/HospitalManagmentSystemModels.ssdl|res://*/HospitalManagmentSystemModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\HospitalManagementDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="HospitalManagementDBEntities1" connectionString="metadata=res://*/HospitalManagementSystemModels.csdl|res://*/HospitalManagementSystemModels.ssdl|res://*/HospitalManagementSystemModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\HospitalManagementDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
