--- a/WpfApp/WpfApp/WpfApp.csproj
+++ b/WpfApp/WpfApp/WpfApp.csproj
@@ -103,6 +103,9 @@
     <Compile Include="WPF_8_EF_HMS.xaml.cs">
       <DependentUpon>WPF_8_EF_HMS.xaml</DependentUpon>
     </Compile>
+    <Compile Include="WPF_EF_HMS.xaml.cs">
+      <DependentUpon>WPF_EF_HMS.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -116,6 +119,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="WPF_8_EF_HMS.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="WPF_EF_HMS.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
